# openmortal-old

./: .gitignore  .gitlab-ci.yml  ChangeLog  INSTALL  Makefile.in  TECHNICAL.md  acinclude.m4  configure  configure.ac  configure.in  mkinstalldirs  openmortal-old.spec
.github/workflow/: build_windows.yml
.github/workflows/: Multi-Platform Build & Release  build-flatpak.yml  build-linux.yml  build-macos.yml  build-retro.yml  build-windows.yml  c-cpp.yml  first.yml  obs.yml  openmortal-build.yml  packaging.yml  test_source.yml  unified-build.yml  windows_build.yml
data/: Makefile.am  Makefile.in
data/characters/: Makefile.in
data/fonts/: Makefile.am  Makefile.in
data/gfx/: Makefile.am  Makefile.in  level12.desc
data/script/: Backend.pl  CollectStats.pl  DataHelper.pl  Doodad.pl  Fighter.pl  FighterStats.pl  Makefile.in  Rewind.pl  State.pl  Translate.pl
data/sound/: Makefile.am  Makefile.in
data/sound/music/: 00_cloud_traveller.mod  03_iron_curtain.xm  03_palle_theme2.mod  04_anthem.mod  05_space_is_the_place.mod  05_zpiff_knulfur.xm  06_wild_impressions.mod  07_cover_up.mod  08_grogon_tabular_ravers.mod  09_electric_love_affair.mod  10_lk.mod  11_maze_among_the_clouds.mod  12_clockwork_city.mod  12_x_fader_persuader.mod
debian/: changelog  control  openmortal-data.install  openmortal.install
installer/: openmortal.iss
packaging/: net.sourceforge.openmortal.yml  openmortal.AppImage.desktop  openmortal.desktop  openmortal.iss
rpm/: openmortal.spec
server/go/: client.go  go.mod  main.go  protocol.go  server.go  web.go
server/python/: mortalnet.py  requirements.txt
src/: AnimBG.cpp  AnimBG.h  AnimGif.cpp  AnimGif.h  Audio.cpp  Audio.h  Backend.cpp  Backend.h  Background.cpp  Background.h  BossKey.cpp  BossKey.h  Chooser.cpp  Chooser.h  Demo.cpp  FighterStats.cpp  FlyingChars.cpp  FlyingChars.h  Game.cpp  Game.h  GameOver.cpp  Jukebox.cpp  Jukebox.h  Makefile.am  Makefile.in  MortalNetworkImpl.cpp  MszPerl.h  OnlineChat.cpp  OnlineChatBEImpl.cpp  PlayerSelect.cpp  PlayerSelect.h  PlayerSelectController.h  PlayerSelectView.cpp  PlayerSelectView.h  RlePack.cpp  State.cpp  State.h  TextArea.cpp  common.cpp  common.h  (+11 more)
