## Process this file with automake to produce Makefile.in

fontsdatadir	= $(pkgdatadir)/fonts
fontsdata_DATA	= \
deadgrit.ttf \
RubikWetPaint-Regular.ttf RubikGlitch-Regular.ttf comic-neue-bold.otf dejavu-thin.ttf \
BungeeSpice-Regular.ttf Combo-Regular.ttf \
brandybun3.png glossyfont.png CreditsFont2.png \
fangfont.png gooddogc.ttf impactfont2.png \
manslem.ttf

EXTRA_DIST = $(fontsdata_DATA)
