## Process this file with automake to produce Makefile.in

sounddatadir	= $(pkgdatadir)/sound
sounddata_DATA	= \
alarm.voc      ding.voc           pop.voc            splat_.voc          thump.wav         \
aroooga.voc    evil_laughter.voc  pop.wav            splat.wav           woman_screams.voc \
ba_gooock.voc  machine_start.voc  shades_rollup.voc  strange_button.voc  woosh.voc         \
bowling.voc    magic.voc          slip4.voc          strange_quack.voc   woosh.wav         \
car_start.voc  moo2.voc           splat2.voc         thump3.voc                            \
crashhh.voc    thump.voc          apert.wav                                                \
autostart.wav  beepdoub.wav       beepdrop.wav       buzzer_2.wav        cow.wav            \
curve.wav      drips.wav          endcountdown_sound.wav                 evilpsychola.wav   \
hit_ground.wav honk.wav           laser.wav          movemenu.wav        shu.wav            \
soundmap.txt   swoosh.wav         top.wav            ups.wav

musicdatadir	= $(pkgdatadir)/sound/music
musicdata_DATA	= \
music/00_ride.mod              \
music/00_cloud_traveller.mod   \
music/04_anthem.mod            \
music/01_2nd_pm.s3m            \
music/02_stardust_memories.mod \
music/03_iron_curtain.xm       \
music/03_palle_theme2.mod      \
music/05_space_is_the_place.mod \
music/05_zpiff_knulfur.xm      \
music/06_wild_impressions.mod  \
music/07_cover_up.mod          \
music/08_grogon_tabular_ravers.mod \
music/09_electric_love_affair.mod  \
music/10_lk.mod                \
music/11_maze_among_the_clouds.mod \
music/12_clockwork_city.mod    \
music/12_x_fader_persuader.mod

EXTRA_DIST = $(sounddata_DATA) $(musicdata_DATA)
